# cmake

./: .gitignore
01_01_firsrt_cmake/: 01_01_first_cmake.cpp  CMakeLists.txt
01_02_static_library/student/: CMakeLists.txt  student.h
01_02_static_library/test_student/: CMakeLists.txt  test_student.cpp
01_03_dynamic_library/: CMakeLists.txt
01_03_dynamic_library/student/: student.h
02_01_cmake_comment/: CMakeLists.txt  log.txt  test_message.cpp
02_02_cmake_set/: CMakeLists.txt
02_03_cmake_message_color/: CMakeLists.txt
02_04_cmake_variable/: CMakeLists.txt  student.h
02_05_cmake_include/: CMakeLists.txt
02_05_cmake_include/cmake/: test_cmake.cmake
02_06_cmake_auto_src/: CMakeLists.txt  main.cpp
02_06_cmake_auto_src/include/: xlog.h  xthread.hpp
02_06_cmake_auto_src/src/: xlog.cpp  xtest.c
02_07_cmake_out/: CMakeLists.txt
02_07_cmake_out/student/: student.cpp  student.h
02_07_cmake_out/test_student/: test_student.cpp
02_08_add_subdirectory/: CMakeLists.txt
02_08_add_subdirectory/student/: CMakeLists.txt  student.cpp  student.h
02_08_add_subdirectory/test_student/: CMakeLists.txt
03_01_cmake_if/: CMakeLists.txt
03_02_cmake_cache/: CMakeLists.txt
03_02_cmake_cache/sub1/: CMakeLists.txt
03_02_cmake_cache/sub2/: CMakeLists.txt
03_03_cmake_property/: CMakeLists.txt  main.cpp
03_03_cmake_property/sub1/: CMakeLists.txt
03_04_cmake_env/: CMakeLists.txt
03_04_cmake_env/sub1/: CMakeLists.txt
03_05_cmake_math/: CMakeLists.txt
